# taksonomia

./: .gitignore  Makefile  README.md  SECURITY.md  SUPPORT.md  baseline-bandit.json  mkdocs.yml  pyproject.toml  requirements.txt  sbom.json  sbom.json.sha256  taksonomia.ABOUT  third-party-fallbacks.yml
docs/: SUMMARY.md  api.md  book.toml  changes.md  index.md  install.md  test-coverage.md  usage.md
etc/: baseline-bandit.json  coverage-totals.json  git-stats.json  mkdocs.yml  monthly-downloads.json  packaging-facts.json  yearly-commits.json
etc/sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
taksonomia/: __init__.py  __main__.py  anglify.py  cli.py  machine.py  taksonomia.py
test/: requirements-dev.txt  test_anglify.py  test_cli.py  test_machine.py  test_taksonomia.py
