[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taksonomia"
version = "2022.9.12"
description = "Taxonomy (Finnish: taksonomia) guided by conventions of a folder tree."
readme = "README.md"
authors = [{ name = "Stefan Hagen", email = "stefan@hagen.link" }]
maintainers = [{ name = "Stefan Hagen", email = "stefan@hagen.link" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["developer-tools", "fingerprints", "validation", "verification", "sbom", "taxonomy"]
dependencies = [
    "PyYAML >= 6.0",
    "lxml >= 4.9.1",
    "orjson >= 3.8.0",
    "psutil >= 5.9.2",
    "py-cpuinfo >= 8.0.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["black", "coverage", "flake8", "hypothesis", "mypy", "pytest", "pytest-cov", "pytest-flake8", "types-jmespath"]

[project.urls]
Homepage = "https://git.sr.ht/~sthagen/taksonomia"
Bug-Tracker = "https://todo.sr.ht/~sthagen/taksonomia"
Documentation = "https://codes.dilettant.life/docs/taksonomia"
Source-Code = "https://git.sr.ht/~sthagen/taksonomia"
Test-Coverage = "https://codes.dilettant.life/coverage/taksonomia"

[project.scripts]
taksonomia = "taksonomia.cli:main"

[tool.setuptools.packages.find]
include = ["taksonomia"]
exclude = ["test*"]

[bdist_wheel]
universal = true

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py38", "py39", "py310"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
omit = [
    "*/__main__.py",
]

[tool.isort]
line_length = 120
known_first_party = "taksonomia"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[tool.mypy]
strict = true
implicit_reexport = true

[tool.pytest]
testpaths = "test"
filterwarnings = "error"
